update - fixing menus on mobile

--- a/assets/sass/sections/header.scss
+++ b/assets/sass/sections/header.scss
@@ -76,6 +76,8 @@ header {
 
         @media(max-width: 650px) {
           max-width: 95%;
+          height: auto;
+          margin: 80px 0 50px;
         }
     }
 
